--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div>
           <h1 class="titleMain">Come creare un template per i post</h1>
           <h2 class="Space">
-            di <a href="">Mario Rossi -</a>pubblicato il 25/10/20
+            di <a href="">Mario Rossi -</a>pubblicato il 25/10/2020
           </h2>
           <p class="Space">
             La prima cosa da fare è suddividere in blocchi logici la pagina,
@@ -81,7 +81,7 @@
                 <td>20%</td>
                 <td>17%</td>
               </tr>
-              <tr>
+              <tr class="tableGrey">
                 <td>2002</td>
                 <td>35%</td>
                 <td>22%</td>
@@ -91,7 +91,7 @@
                 <td>45%</td>
                 <td>42%</td>
               </tr>
-              <tr>
+              <tr class="tableGrey">
                 <td>2008</td>
                 <td>80%</td>
                 <td>51%</td>
