--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <div>
           <h1 class="titleMain">Come creare un template per i post</h1>
           <h2 class="Space">
-            di <a href="">Mario Rossi -</a>pubblicato il 25/10/2020
+            <i class="fa-solid fa-pen-to-square"></i>di
+            <a href="">Mario Rossi -</a
+            ><i class="fa-solid fa-clock"></i>pubblicato il 25/10/2020
           </h2>
           <p class="Space">
             La prima cosa da fare è suddividere in blocchi logici la pagina,
@@ -57,9 +59,14 @@
           </p>
           <p class="Space">Le varie aree saranno quindi suddivise in:</p>
           <ul class="ulClass">
-            <li>Contenuti di intestazione del tag header</li>
-            <li>Contenuti centralivariabili del tag main copro principale</li>
-            <li>Contenuti di fine pagina comuni, da inserire nel tag footer</li>
+            <li>Contenuti di intestazione del tag <b>&lt header &gt</b></li>
+            <li>
+              Contenuti centralivariabili del tag <b>&lt main &gt</b> principale
+            </li>
+            <li>
+              Contenuti di fine pagina comuni, da inserire nel tag
+              <b>&lt footer &gt</b>
+            </li>
           </ul>
           <p class="Space">
             Formattazione veloce. Il testo dell articolo dovrà essere formattato
@@ -145,9 +152,39 @@
             </div>
           </div>
           <h1 id="correlateArt">ARTICOLI CORRELATI</h1>
+          <div class="Contenuti Space">
+            <a href="">Validare il codice HTML</a>
+            <p><i class="fa-solid fa-tag"></i>Categoria:Devlop</p>
+            <p class="Date">
+              <i class="fa-solid fa-calendar-days"></i> Data: 18-9-2020
+            </p>
+          </div>
+          <div class="Contenuti Space">
+            <a href="">Correggere la sintassi</a>
+            <p><i class="fa-solid fa-tag"></i>Categoria:Devlop</p>
+            <p class="Date">
+              <i class="fa-solid fa-calendar-days"></i> Data: 16-9-2020
+            </p>
+          </div>
+          <div class="Contenuti Space">
+            <a href="">Meno Kb nella pagina</a>
+            <p><i class="fa-solid fa-tag"></i>Categoria:Ottimizzazione</p>
+            <p class="Date">
+              <i class="fa-solid fa-calendar-days"></i> Data: 30-9-2020
+            </p>
+          </div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="Space">
+        <h3>Blog Epicode 2021</h3>
+        <p>
+          Testata online di Mario Rossi,registrata con prot.n.213/2018 - Via
+          Luigi Einaudi 2 - Milano. P.IVA 00112233.
+          <a id="Email">info@epicode.school</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
